# lazyslurm

./: Cargo.toml  README.md
src/: app.rs  jobs.rs  main.rs  tui.rs  ui.rs
