[package]
name = "lazyslurm"
version = "1.6.0"
authors = ["C Jones"]
repository = "github.com/Charl-AI/lazyslurm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.3"
regex = "1.10.5"
tui-textarea = "0.4.0"
